--- a/files/index.html
+++ b/files/index.html
@@ -1,5 +1,5 @@
 
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><title>Index of /dist/</title></head>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><title>Index of /</title></head>
 <body bgcolor="white">
 <h1>Index of /</h1><hr><pre><a href="https://cdn.devcomp.tk/">../</a>
 <a href="https://cdn.devcomp.tk/ajax/libs/animate.css/4.1.1/animate.min.css/">/ajax/libs/animate.css/4.1.1/animate.min.css/</a>                                           
