--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1 class="hero-title">DevComp's CDN</h1>
     
       <p class="hero-description">
-        A blazingly fast CDN, at par with up-to-date with modern web technologies.
+        A blazingly fast CDN, at par and up-to-date with modern web technologies.
       </p>
       <button class="hero-btn">
         <a href="https://cdn.devcomp.tk">Setup Instructions</a>
