add seo tags for embeds

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="https://cdn.devcomp.tk/img/logo.png">
+    <meta property="og:title" content="DevComp's CDN" />
+    <meta property="og:locale" content="en_US" />
+    <meta name="description" content="A blazingly fast CDN, at par and up-to-date with modern web technologies." />
+    <meta property="og:description" content="A blazingly fast CDN, at par and up-to-date with modern web technologies." />
+    <link rel="canonical" href="https://cdn.devcomp.tk" />
+    <meta property="og:url" content="https://cdn.devcomp.tk" />
+    <meta property="og:site_name" content="DevComp's CDN" />
+    <meta name="twitter:card" content="summary" />
+    <meta property="twitter:title" content="DevComp's CDN" />
 
     <title>DevComp's CDN</title>
     
