replace support link with GitHub

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>  
   <body>
       <ul class="navbar">
-        <li class="nav-item"><a href="https://devcomp.tk/discord" >Support</a></li>
+        <li class="nav-item"><a href="https://github.com/TheAwesomeCoder05/cdn/" >GitHub</a></li>
       </ul>
     
     <header class="hero-section">
