--- a/files/index.html
+++ b/files/index.html
@@ -16,7 +16,8 @@
 <a href="https://cdn.devcomp.tk/img/rabit.png">/img/rabit.png/</a>     
 <a href="https://cdn.devcomp.tk/img/raw.jpg">/img/raw.jpg/</a>
 <a href="https://cdn.devcomp.tk/img/tiger.png">/img/tiger.jpg/</a>     
-<a href="https://cdn.devcomp.tk/img/wave.png">/img/wave.png/</a>                           
+<a href="https://cdn.devcomp.tk/img/wave.png">/img/wave.png/</a>          
+<a href="https://cdn.devcomp.tk/img/meme.jpg">/img/wave.png/</a>    
 </pre><hr>
 
 </body></html>
