--- a/files/index.html
+++ b/files/index.html
@@ -17,7 +17,7 @@
 <a href="https://cdn.devcomp.tk/img/raw.jpg">/img/raw.jpg/</a>
 <a href="https://cdn.devcomp.tk/img/tiger.png">/img/tiger.jpg/</a>     
 <a href="https://cdn.devcomp.tk/img/wave.png">/img/wave.png/</a>          
-<a href="https://cdn.devcomp.tk/img/meme.jpg">/img/wave.png/</a>    
+<a href="https://cdn.devcomp.tk/img/meme.jpg">/img/meme.jpg/</a>    
 </pre><hr>
 
 </body></html>
