--- a/files/index.html
+++ b/files/index.html
@@ -2,9 +2,11 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><title>Index of /</title></head>
 <body bgcolor="white">
 <h1>Index of /</h1><hr><pre><a href="https://cdn.devcomp.tk/">../</a>
-<a href="https://cdn.devcomp.tk/ajax/libs/animate.css/4.1.1/animate.min.css/">/ajax/libs/animate.css/4.1.1/animate.min.css/</a>   
+<a href="https://cdn.devcomp.tk/ajax/libs/animate.css/4.1.1/animate.min.css/">/ajax/libs/animate.css/4.1.1/animate.min.css</a>   
 <a href="https://cdn.devcomp.tk/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css/</a>
 <a href="https://cdn.devcomp.tk/ajax/libs/anchor-js/4.1.0/anchor.min.js">/ajax/libs/anchor-js/4.1.0/anchor.min.js/</a>
+<a href="https://cdn.devcomp.tk/ajax/libs/react/18.0.0-rc.0-next-419ccc2b1-20220217/umd/react.production.min.js">/ajax/libs/react/18.0.0-rc.0-next-419ccc2b1-20220217/umd/react.production.min.js/</a>    
+<a href="https://cdn.devcomp.tk/ajax/libs/vue/3.2.31/vue.cjs.js">/ajax/libs/vue/3.2.31/vue.cjs.js</a> 
 <a href="https://cdn.devcomp.tk/css/bootstrap.min.css">/css/bootstrap.min.css/</a>                               
 <a href="https://cdn.devcomp.tk/css/download.css">/css/download.css/</a>                               
 <a href="https://cdn.devcomp.tk/css/musiccomp.css">/css/musiccomp.css/</a>     
@@ -18,6 +20,7 @@
 <a href="https://cdn.devcomp.tk/img/tiger.png">/img/tiger.jpg/</a>     
 <a href="https://cdn.devcomp.tk/img/wave.png">/img/wave.png/</a>          
 <a href="https://cdn.devcomp.tk/img/meme.jpg">/img/meme.jpg/</a>    
+
 </pre><hr>
 
 </body></html>
