add new libs to list

--- a/files/index.html
+++ b/files/index.html
@@ -5,6 +5,7 @@
 <a href="https://cdn.devcomp.tk/ajax/libs/animate.css/4.1.1/animate.min.css/">/ajax/libs/animate.css/4.1.1/animate.min.css/</a>   
 <a href="https://cdn.devcomp.tk/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css/</a>
 <a href="https://cdn.devcomp.tk/ajax/libs/anchor-js/4.1.0/anchor.min.js">/ajax/libs/anchor-js/4.1.0/anchor.min.js/</a>
+<a href="https://cdn.devcomp.tk/ajax/libs/angular/12.2.16/core.umd.min.js">/ajax/libs/angular/12.2.16/core.umd.min.js/</a>
 <a href="https://cdn.devcomp.tk/ajax/libs/react/18.0.0-rc.0-next-419ccc2b1-20220217/umd/react.production.min.js">/ajax/libs/react/18.0.0-rc.0-next-419ccc2b1-20220217/umd/react.production.min.js/</a>    
 <a href="https://cdn.devcomp.tk/ajax/libs/vue/3.2.31/vue.cjs.js">/ajax/libs/vue/3.2.31/vue.cjs.js/</a> 
 <a href="https://cdn.devcomp.tk/css/bootstrap.min.css">/css/bootstrap.min.css/</a>                               
@@ -24,3 +25,4 @@
 </pre><hr>
 
 </body></html>
+
