add new files to list

--- a/files/index.html
+++ b/files/index.html
@@ -2,6 +2,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><title>Index of /</title></head>
 <body bgcolor="white">
 <h1>Index of /</h1><hr><pre><a href="https://cdn.devcomp.tk/">../</a>
+<a href="https://cdn.devcomp.tk/jars/Lavalink.jra">/jars/Lavalink.jar/</a> 
 <a href="https://cdn.devcomp.tk/ajax/libs/animate.css/4.1.1/animate.min.css/">/ajax/libs/animate.css/4.1.1/animate.min.css/</a>   
 <a href="https://cdn.devcomp.tk/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css/</a>
 <a href="https://cdn.devcomp.tk/ajax/libs/anchor-js/4.1.0/anchor.min.js">/ajax/libs/anchor-js/4.1.0/anchor.min.js/</a>
